<resources>
    <string name="app_name">Мессенджер</string>
    <string name="sign_in">Авторизация</string>
    <string name="login">Логин</string>
    <string name="passwd">Пароль</string>
    <string name="buttn_sign">Вход</string>
    <string name="log_in">Регистрация</string>
    <string name="settings_deskr">Настройки</string>
    <string name="profile">Профиль пользователя</string>
    <string name="chats">Чаты</string>
    <string name="create_mess">Написать</string>

</resources>