<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_back">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yomogi_regular"
        android:text="@string/sign_in"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="70dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="600dp"
        android:layout_marginStart="70dp"
        android:text="@string/log_in"
        android:fontFamily="@font/yomogi_regular"
        android:textColorHint="@color/dark_purple"
        android:textSize="24sp"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:id="@+id/sign_in"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sign_in"
        android:layout_marginBottom="-440dp">

        <EditText
            android:id="@+id/passw"
            android:layout_width="204dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="32dp"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/yomogi_regular"
            android:gravity="center"
            android:hint="@string/passwd"
            android:inputType="textMultiLine"
            android:textColor="@color/blue"
            android:textColorHint="@color/blue"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/log"
            android:layout_width="204dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="32dp"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/yomogi_regular"
            android:gravity="center"
            android:hint="@string/login"
            android:inputType="textMultiLine"
            android:textColor="@color/blue"
            android:textColorHint="@color/blue"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/passw"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="204dp"
            android:layout_height="50dp"
            android:background="@drawable/sign_button"
            android:fontFamily="@font/yomogi_regular"
            android:text="@string/buttn_sign"
            android:textAllCaps="false"
            android:textColorHint="@color/dark_purple"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="409dp"
            android:layout_height="730dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="1dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>